# foodgram

./: .env.example  README.md  pyproject.toml
.github/workflows/: main.yml
backend/: Dockerfile  requirements.txt
backend/api/: constants.py  decorators.py  filters.py  mixins.py  pagination.py  permissions.py  serializers.py  urls.py  utils.py  views.py
backend/foodgram/: settings.py  urls.py  views.py
backend/recipes/: admin.py  constants.py  models.py  urls.py  utils.py  views.py
backend/recipes/migrations/: 0001_initial.py  0002_alter_favorite_options_alter_shoppingcart_options_and_more.py
backend/users/: admin.py  constants.py  models.py  utils.py
backend/users/migrations/: 0001_initial.py
frontend/src/pages/about/: index.js
frontend/src/pages/technologies/: index.js
infra/: docker-compose.production.yml  docker-compose.yml  nginx.conf
scripts/: data_loader.py
